# currency_value

./: .coveragerc  MANIFEST.in  Makefile  README.md  README.txt  celeryconfig.py  development.ini  production.ini  pyproject.toml  pytest.ini  setup.py  tasks.py  testing.ini
financial_system/: __init__.py  pshell.py  views.py
financial_system/alembic/: env.py
financial_system/alembic/versions/: 20211226_065d59ec8701.py  20211226_de53536facba.py  20211231_0ca633c9bc82.py
financial_system/api/: __init__.py  dolar.py  euro.py  schemas.py
financial_system/models/: __init__.py  dolar.py  euro.py  mixins.py
financial_system/scripts/: initialize_db.py
financial_system/tasks/: web_crawler.py
financial_system/templates/: layout.jinja2
financial_system/utils/: conversor.py
tests/: conftest.py  factories.py
